Panel: Visibility hidden for closed panels. Fixes #5652.
This prevents focus on links in closed panels when using the tab key.

--- a/css/structure/jquery.mobile.panel.css
+++ b/css/structure/jquery.mobile.panel.css
@@ -10,6 +10,7 @@
 .ui-panel-closed {
 	width: 0;
 	overflow: hidden;
+	visibility: hidden;
 }
 .ui-panel-fixed {
 	position: fixed;
